Add Updatemethod